--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -5,6 +5,7 @@ $light-background-pink-translucent: rgba(255, 224, 239, 0.5);
 $light-foreground: rgb(22, 22, 22);
 $light-foreground-fade: rgb(50, 50, 50);
 $light-foreground-semi: rgb(109, 109, 109);
+$light-foreground-faint: rgb(172, 172, 172);
 
 $light-foreground-elevated: rgb(223, 223, 223);
 $light-foreground-elevated-shadow: rgb(172, 172, 172);
