--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -18,6 +18,7 @@ $light-snippet-line-number: rgb(192, 192, 192);
 
 $light-swift: rgb(134, 134, 134);
 $light-accent-comment: $light-foreground-semi;
+$light-accent-barbie-pink-semi: rgb(255, 136, 176);
 $light-accent-barbie-pink: rgb(255, 86, 158);
 $light-accent-barbie-pink-shadow: rgb(209, 23, 104);
 
