--- a/Stylesheets/_Calendar.scss
+++ b/Stylesheets/_Calendar.scss
@@ -1,7 +1,7 @@
 @import 'Colors';
 @import 'Typefaces';
 
-section.introduction > nav
+section.introduction > nav.calendar
 {
     margin: 2rem 0 1rem 0;
     display: flex;
