--- a/Stylesheets/_Declarations.scss
+++ b/Stylesheets/_Declarations.scss
@@ -187,6 +187,54 @@ section.declaration pre
     }
 }
 
+section.metadata
+{
+    details[open]
+    {
+        summary::before
+        {
+            content: '▼';
+        }
+    }
+    details
+    {
+        summary::marker
+        {
+            content: '';
+        }
+        summary::before
+        {
+            content: '▶';
+            color: $light-foreground-faint;
+            display: inline-block;
+            width: 1.25rem;
+        }
+        summary
+        {
+            margin: 0.5rem 0;
+            position: relative;
+            left: -1.25rem;
+
+            font-style: italic;
+            color: $light-foreground-semi;
+        }
+
+        p.symbol:first-letter
+        {
+            font-weight: 700;
+        }
+
+        code span.fnv24
+        {
+            font-weight: 700;
+        }
+    }
+    details:last-child
+    {
+        margin-bottom: 2rem;
+    }
+}
+
 section.parameters,
 section.returns
 {
