fix failure to hide summary marker on webkit browsers

--- a/Stylesheets/_Groups.scss
+++ b/Stylesheets/_Groups.scss
@@ -49,6 +49,10 @@ section.group
         {
             content: '';
         }
+        summary::-webkit-details-marker
+        {
+            display: none;
+        }
     }
     details[open]
     {
