--- a/Stylesheets/_Declarations.scss
+++ b/Stylesheets/_Declarations.scss
@@ -202,6 +202,10 @@ section.metadata
         {
             content: '';
         }
+        summary::-webkit-details-marker
+        {
+            display: none;
+        }
         summary::before
         {
             content: '▶';
