--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -1,4 +1,4 @@
-@import 'BackdropBlur';
+@import 'Mixins/BackdropBlur';
 @import 'Calendar';
 @import 'Cards';
 @import 'Charts';
@@ -6,12 +6,17 @@
 @import 'CodeBlocks';
 @import 'CodeSpans';
 @import 'Declarations';
-@import 'Groups';
+@import 'Div.Constraints';
+@import 'Div.More';
 @import 'Headings';
 @import 'Home';
 @import 'Logo';
 @import 'Notices';
 @import 'Search';
+@import 'Section.Details';
+@import 'Section.Group';
+@import 'Section.Group.Dense';
+@import 'Section.Introduction';
 @import 'Sidebar';
 @import 'Tables';
 @import 'Typefaces';
