improve styling of uplink tools and event log

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -8,17 +8,20 @@
 @import 'Declarations';
 @import 'Div.Constraints';
 @import 'Div.More';
+@import 'Form';
 @import 'Headings';
 @import 'Home';
 @import 'Logo';
 @import 'Notices';
 @import 'Search';
 @import 'Section.Details';
+@import 'Section.Events';
 @import 'Section.Group';
 @import 'Section.Group.Dense';
 @import 'Section.Introduction';
 @import 'Sidebar';
 @import 'Tables';
+@import 'Table.Tags';
 @import 'Typefaces';
 @import 'Prose';
 
