unfuck SCSS after changing dl style

--- a/Stylesheets/_section.availability.scss
+++ b/Stylesheets/_section.availability.scss
@@ -4,6 +4,8 @@ section.availability
 
     dl
     {
+        display: block;
+
         margin: 0;
         font-size: 87.5%;
         font-family: $typeface-sans;
