implement #124, and add even more details about available manifests

--- a/Stylesheets/_p.scss
+++ b/Stylesheets/_p.scss
@@ -10,3 +10,14 @@ p
         @include inline-code;
     }
 }
+
+p.note
+{
+    color: $light-foreground-semi;
+    font-style: italic;
+
+    em
+    {
+        font-style: normal;
+    }
+}
