--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -6,13 +6,13 @@
 @import 'CodeBlocks';
 @import 'CodeSpans';
 @import 'div.constraints';
+@import 'div.logo';
 @import 'div.more';
 @import 'dl';
 @import 'form';
 @import 'Headings';
-@import 'Home';
 @import 'kbd';
-@import 'Logo';
+@import 'main.home';
 @import 'Notices';
 @import 'p';
 @import 'Search';
