support grid layout directives; improve visual appearance of code blocks

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -3,8 +3,8 @@
 @import 'Cards';
 @import 'Charts';
 @import 'Colors';
-@import 'CodeBlocks';
 @import 'CodeSpans';
+@import 'div.columns';
 @import 'div.constraints';
 @import 'div.logo';
 @import 'div.more';
@@ -15,6 +15,7 @@
 @import 'main.home';
 @import 'Notices';
 @import 'p';
+@import 'pre';
 @import 'Search';
 @import 'section.availability';
 @import 'section.declaration';
