support diff highlights in tutorial code blocks

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -3,7 +3,7 @@
 @import 'Cards';
 @import 'Charts';
 @import 'Colors';
-@import 'CodeSpans';
+@import 'code';
 @import 'div.columns';
 @import 'div.constraints';
 @import 'div.logo';
