add diff highlight styles

--- a/Stylesheets/_Colors.scss
+++ b/Stylesheets/_Colors.scss
@@ -30,5 +30,9 @@ $light-accent-violet: rgb(141, 61, 231);
 $light-accent-aqua: rgb(0, 193, 207);
 $light-accent-aqua-shadow: rgb(0, 162, 173);
 
+$light-diff-insert: rgba(0, 255, 255, 0.3);
+$light-diff-delete: rgba(255, 72, 0, 0.3);
+$light-diff-update: rgba(255, 0, 212, 0.3);
+
 $dark-accent-yellow: rgb(255, 157, 32);
 $dark-accent-violet: rgb(150, 80, 255);
