fix multiple bugs in the diff renderer

--- a/Stylesheets/_pre.scss
+++ b/Stylesheets/_pre.scss
@@ -38,14 +38,17 @@ pre.snippet
         ins
         {
             background-color: $light-diff-insert;
+            text-decoration: inherit;
         }
         del
         {
             background-color: $light-diff-delete;
+            text-decoration: inherit;
         }
         mark
         {
             background-color: $light-diff-update;
+            text-decoration: inherit;
         }
     }
     code.language-swift
