--- a/Stylesheets/_figure.scss
+++ b/Stylesheets/_figure.scss
@@ -1,3 +1,14 @@
+figure
+{
+    margin: 2rem 0;
+
+    img
+    {
+        max-width: 100%;
+        max-height: 40rem;
+    }
+}
+
 figure.decl div.pie-color > svg g
 {
     > *
@@ -120,7 +131,6 @@ figure div.pie
 }
 figure.chart
 {
-    margin: 2rem 0;
     display: flex;
     flex-direction: column;
 }
