improve styling of terms lists, and add more tests for doclink resolution

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -26,6 +26,7 @@
 @import 'section.group';
 @import 'section.group.dense';
 @import 'section.introduction';
+@import 'section.literature';
 @import 'section.metadata';
 @import 'Sidebar';
 @import 'Tables';
