--- a/Stylesheets/_section.details.scss
+++ b/Stylesheets/_section.details.scss
@@ -35,46 +35,26 @@ section.details
 
     section.parameters
     {
-        > h2,
-        > dl
+        > h2
         {
             padding-left: 0;
         }
         > dl
         {
             counter-set: parameter-index -1;
-            display: block;
 
             > dt
             {
                 counter-increment: parameter-index;
-                margin-top: 2rem;
-
-                font-family: $typeface-monospace;
-                font-weight: 700;
-
-                > a
-                {
-                    color: inherit;
-                }
             }
             > dt:not([id])::before, // backwards compatibility with older symbol graphs
             > dt > a::before
             {
                 content: '$' counter(parameter-index);
-                display: inline-block;
-                min-width: 3rem;
-                color: $light-snippet-line-number;
-                font-weight: normal;
-            }
-
-            > dd
-            {
-                padding-left: 3rem;
-                margin-left: 0;
             }
         }
     }
+
     section.returns
     {
         > h2
@@ -93,37 +73,5 @@ section.details
         font-size: 90.625%;
     }
 
-    aside
-    {
-        position: relative;
-        margin: 2rem 0;
 
-        h3
-        {
-            margin: 0;
-            padding: 0.5rem 0;
-            font-size: inherit;
-
-            color: $light-foreground-semi;
-            border-bottom: 2px solid $light-foreground-semi;
-        }
-
-        border-bottom: 2px solid $light-foreground-semi;
-    }
-    aside.important,
-    aside.warning
-    {
-        h3
-        {
-            color: $light-accent-hot-pink;
-            border-color: $light-accent-hot-pink;
-        }
-
-        border-color: $light-accent-hot-pink;
-    }
-
-    aside:last-child
-    {
-        border-bottom: none;
-    }
 }
