--- a/Stylesheets/_div.more.scss
+++ b/Stylesheets/_div.more.scss
@@ -22,32 +22,33 @@ div.more
         font-weight: 700;
         font-size: 120%;
     }
-}
 
-div.more div.charts
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-
-    h2, h3
+    > div.charts
     {
-        font-size: 100%;
-        margin: 0;
-    }
-    h3
-    {
-        font-weight: 500;
-        color: $light-foreground-semi;
-    }
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
 
-    figure
-    {
-        margin: 1rem;
-
-        div.pie
+        h2, h3
         {
-            font-size: 10px;
+            font-size: 100%;
+            margin: 0;
+        }
+        h3
+        {
+            font-weight: 500;
+            color: $light-foreground-semi;
+        }
+
+        figure
+        {
+            margin: 1rem;
+
+            div.pie
+            {
+                font-size: 10px;
+            }
         }
     }
 }
+
