--- a/Stylesheets/_figure.scss
+++ b/Stylesheets/_figure.scss
@@ -108,87 +108,75 @@ figure.chart.coverage svg > g
     }
 }
 
-figure div.pie
-{
-    > div.pie-color
-    {
-        height: 0;
-        width: 0;
-        margin: 0;
-    }
-
-    > div.pie-color > svg,
-    > div.pie-geometry
-    {
-        width: 12em;
-        height: 12em;
-        margin: 0;
-        position: relative;
-    }
-
-    > div.pie-geometry
-    {
-        transition: box-shadow 0.1s ease-out;
-        pointer-events: none;
-
-        border-radius: 6em;
-        box-shadow:
-            inset 0 -0.5em 0.75em -0.75em rgba(255, 255, 255, 0.3),
-            inset 0 -0.4em 0.5px   0.1em rgba(0,0,0,0.24),
-            inset 0 -1.3em 5em     0.1em rgba(0,0,0,0.14);
-    }
-    > div.pie-color:hover + div.pie-geometry
-    {
-        box-shadow:
-            inset 0 -0.5em 1.5em -0.75em rgba(255, 255, 255, 0.5),
-            inset 0 -0.4em 0.5px   0.1em rgba(0,0,0,0.18),
-            inset 0 -1.3em 5em     0.1em rgba(0,0,0,0.11);
-    }
-}
 figure.chart
 {
     display: flex;
-    flex-direction: column;
-}
-figure.chart div.pie
-{
-    //  This controls the size of the pie disc.
-    font-size: 20px;
+    align-items: center;
+    flex-direction: row;
 
-    margin: 0 2rem 2rem 2rem;
-}
-@media only screen and (min-width: 50rem)
-{
-    figure.chart
-    {
-        align-items: center;
-        flex-direction: row;
-    }
-    figure.chart div.pie
+    div.pie
     {
         margin: 0;
-    }
-}
-figure.chart div.pie + figcaption
-{
-    align-self: flex-start;
-    dl
-    {
-        margin: 0 0 0 1rem;
+        //  This controls the size of the pie disc.
+        font-size: 20px;
 
-        display: grid;
-        grid-template-columns: auto 4rem;
-        direction: rtl;
-
-        dd
+        > div.pie-color
         {
-            grid-column: 2;
+            height: 0;
+            width: 0;
             margin: 0;
         }
-        dt
+
+        > div.pie-color > svg,
+        > div.pie-geometry
         {
-            direction: ltr;
-            margin-left: 1rem;
+            width: 12em;
+            height: 12em;
+            margin: 0;
+            position: relative;
+        }
+
+        > div.pie-geometry
+        {
+            transition: box-shadow 0.1s ease-out;
+            pointer-events: none;
+
+            border-radius: 6em;
+            box-shadow:
+                inset 0 -0.5em 0.75em -0.75em rgba(255, 255, 255, 0.3),
+                inset 0 -0.4em 0.5px   0.1em rgba(0,0,0,0.24),
+                inset 0 -1.3em 5em     0.1em rgba(0,0,0,0.14);
+        }
+        > div.pie-color:hover + div.pie-geometry
+        {
+            box-shadow:
+                inset 0 -0.5em 1.5em -0.75em rgba(255, 255, 255, 0.5),
+                inset 0 -0.4em 0.5px   0.1em rgba(0,0,0,0.18),
+                inset 0 -1.3em 5em     0.1em rgba(0,0,0,0.11);
+        }
+    }
+
+    div.pie + figcaption
+    {
+        align-self: flex-start;
+        dl
+        {
+            margin: 0 0 0 1rem;
+
+            display: grid;
+            grid-template-columns: auto 4rem;
+            direction: rtl;
+
+            dd
+            {
+                grid-column: 2;
+                margin: 0;
+            }
+            dt
+            {
+                direction: ltr;
+                margin-left: 1rem;
+            }
         }
     }
 }
