display source locations for @Code blocks and inlined @Snippets

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -19,6 +19,7 @@
 @import 'p';
 @import 'pre';
 @import 'Search';
+@import 'section';
 @import 'section.availability';
 @import 'section.declaration';
 @import 'section.details';
