adjust styles to optimize for mobile, and add color for Bulgarian language

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -83,6 +83,10 @@ figure.language div.pie-color > svg g
     {
         fill: #2ba720;
     }
+    > *.bg
+    {
+        fill: #a688ae;
+    }
     > *.bn
     {
         fill: #d88f5f;
