add color code for Czech Republic

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -95,6 +95,10 @@ figure.language div.pie-color > svg g
     {
         fill: #ff8d61;
     }
+    > *.cs
+    {
+        fill: #a099ff;
+    }
     > *.da
     {
         fill: #c86775;
