--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -25,7 +25,6 @@
 @import 'section.details';
 @import 'section.events';
 @import 'section.group';
-@import 'section.group.dense';
 @import 'section.introduction';
 @import 'section.literature';
 @import 'section.metadata';
@@ -34,6 +33,7 @@
 @import 'table';
 @import 'table.tags';
 @import 'Typefaces';
+@import 'ul.cards';
 
 body
 {
