add underline styling to breadcrumb links

--- a/Stylesheets/_section.introduction.scss
+++ b/Stylesheets/_section.introduction.scss
@@ -60,6 +60,7 @@ section.introduction
         a:not(:hover)
         {
             color: $light-foreground-semi;
+            text-decoration: underline dashed;
         }
 
         > *:first-child
