add color code for Azerbaijani language

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -83,6 +83,10 @@ figure.language div.pie-color > svg g
     {
         fill: #2ba720;
     }
+    > *.az
+    {
+        fill: #a84074;
+    }
     > *.bg
     {
         fill: #a688ae;
