--- a/Stylesheets/_code.scss
+++ b/Stylesheets/_code.scss
@@ -18,7 +18,7 @@ code
     {
         color: $light-foreground;
     }
-    span.xa,    // attribute
+    span.xa, a.xa, // attribute
     span.xr,    // directive
     span.xk,    // keyword
     span.xm     // magic
