add color code for Greek to language list

--- a/Stylesheets/Admin.scss
+++ b/Stylesheets/Admin.scss
@@ -111,6 +111,10 @@ figure.language div.pie-color > svg g
     {
         fill: #645551;
     }
+    > *.el
+    {
+        fill: #acd0ff;
+    }
     > *.en
     {
         fill: #fd74a2;
